# devctk

./: .gitignore  DESIGN.md  README.md  pyproject.toml
archive/: z-ctk-codex
src/devctk/: __init__.py  __main__.py  agent.py  cli.py  commands.py  helpers.py  mise.py  nix.py  paths.py  systemd.py  util.py
src/devctk/templates/: bootstrap_nix.sh  bootstrap_pkg.sh  bootstrap_ssh.sh  bootstrap_user.sh  container_helper.sh  sshd_helper.sh
tests/: test_smoke.py
