[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devctk"
version = "0.2.0"
description = "Container toolkit for rootless Podman dev containers with SSH, Nix, and agent support"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "aur3l14no" }]
classifiers = [
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devctk"]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
devctk = "devctk.cli:main"
